Home page on mobile, cloudinary images, responsivity fix

--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -36,5 +36,12 @@
 @media (max-width: 1115px) {
   .home-section {
     justify-content: center;
+    flex-direction: column-reverse !important;
+  }
+
+  .home-page-image img {
+    margin-bottom: 5%;
+    height: unset;
+    width: 40%;
   }
 }
