--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -128,18 +128,19 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  width: 128px;
+  width: 105px;
   height: 50px;
   border-radius: 5px;
   background-color: #d46a00;
   border: 1px solid #d46a00;
   transition: opacity 0.3s ease;
-  font-size: 16px;
+  font-size: 14px;
   color: white;
 
   svg {
     color: #fff !important;
     margin-right: 5%;
+    height: 16px;
   }
 }
 
